@@ -1,8 +1,9 @@
 0.1.4
- - set range for fluorescence data to 2**15
+ - added compatibility mode for range of int16 data
  - fix UnicodeDecodeError when saving UTF-8 headers
  - add switch for changing endianness of data stored
  - remove rows containing NaN values before writing
+ - minor fix for examples
 0.1.3
  - include all example data in dist package
  - force installation of package data
